--- a/server/dockerfile
+++ b/server/dockerfile
@@ -2,15 +2,17 @@ FROM python:3.10
 
 WORKDIR /server
 
-ENV FLASK_APP = app.py
+ENV FLASK_APP=app.py
 
 
 COPY ./requirements.txt .
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y libgl1-mesa-glx
 
 COPY . .
 
 EXPOSE 5000
-CMD [ "flask","run" ]
+CMD [ "python","app.py" ]
